--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   webapp:
     build:
@@ -9,7 +7,8 @@ services:
     volumes:
       - ../..:/workspaces:cached
     command: sleep infinity
-    network_mode: service:db
+    ports: 
+      - "5000:5000"
   db:
     image: postgres:16-alpine
     restart: unless-stopped
